changed the intro text

--- a/app/code/src/components/intro/intro.css
+++ b/app/code/src/components/intro/intro.css
@@ -8,6 +8,25 @@ h4{
     font-family: cursive;
     font-weight: 900;
 }
+.innner-intro-wrapper .intro-inner-title {
+    color: black;
+    font-family: 'roboto';
+    font-weight: 300;
+}
+.list {
+    color: red;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+}
+
+.list .intro-inner-item {
+    color: black;
+    font-family: 'roboto';
+    font-weight: 900;
+    list-style-type: none;
+}
 
 
 .intro>.profile-image {
@@ -103,6 +122,8 @@ h4{
     font-style: oblique;
     /* font-weight: 900; */
 }
+
+
 
 @media screen and (max-width: 760px) {
 
