done with the navigation

--- a/app/code/src/components/app-bar/AppBar.css
+++ b/app/code/src/components/app-bar/AppBar.css
@@ -4,7 +4,7 @@
 
 .logo {
     color: white;
-    font-size: var(--defaultFontSize);
+    font-size: 1.6rem;
     font-weight: 900;
     font-style: italic;
 }
@@ -30,6 +30,7 @@
 
 .right_side .links li a:hover{
     border-bottom: 5px solid black;
+    transition: 0.5s;
 }
 
 .menu {
@@ -43,5 +44,9 @@
 
     .menu {
         display: block;
+    }
+
+    .logo {
+        font-size: var(--defaultFontSize);
     }
 }
