modified the sidebar colors

--- a/app/code/src/components/app-bar/AppBar.css
+++ b/app/code/src/components/app-bar/AppBar.css
@@ -51,4 +51,9 @@
     .navbar {
         background-color: green;
     }
+
+    .menu {
+        color: crimson;
+        padding: 0px 08px;
+    }
 }
