--- a/app/code/src/components/intro/intro.css
+++ b/app/code/src/components/intro/intro.css
@@ -19,6 +19,23 @@
     object-fit: cover;
 }
 
+.intro_left_side{
+    /* background-color: red; */
+    display: block;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    padding-top: 15px;
+    /* text-align: center; */
+}
+
+#first_name, #last_name {
+    color: crimson;
+    font-style: italic;
+    font-size: 1.2rem;
+    font-weight: 900;
+}
+
 @media screen and (max-width: 480px) {
     
     .intro_container {
@@ -29,5 +46,23 @@
     .profile{
         width: 300px;
         height: 300px;
+    }
+
+    .intro_left_side {
+        padding-top: 20px;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 915px) {
+
+    .intro_left_side {
+        padding-top: 30rem;
+    }
+
+}
+
+@media screen and (min-width: 481px) and (max-width: 767px) {
+    .intro_left_side {
+        padding-top: 10rem;
     }
 }
