--- a/app/code/src/components/intro/intro.css
+++ b/app/code/src/components/intro/intro.css
@@ -36,6 +36,10 @@
     font-weight: 900;
 }
 
+.profession, .tool, .programming_paragigm{
+    color: crimson
+}
+
 @media screen and (max-width: 480px) {
     
     .intro_container {
@@ -50,7 +54,18 @@
 
     .intro_left_side {
         padding-top: 20px;
+        width: 300px;
+        height: 200px;
+        /* background-color: green; */
+        margin: 0px auto;
+
+        
     }
+    .programming_paragigm{
+            display: block;
+            color: green;
+    }
+    
 }
 
 @media screen and (min-width: 768px) and (max-width: 915px) {
@@ -58,6 +73,11 @@
     .intro_left_side {
         padding-top: 30rem;
     }
+
+    .programming_paragigm{
+        display: block;
+        color: green;
+}
 
 }
 
