--- a/app/code/src/components/intro/intro.css
+++ b/app/code/src/components/intro/intro.css
@@ -19,35 +19,39 @@
     object-fit: cover;
 }
 
-.intro_left_side{
+.intro_left_side {
     /* background-color: red; */
     display: block;
     justify-content: center;
     align-items: center;
     align-content: center;
     padding-top: 15px;
-    /* text-align: center; */
+
+    line-height: 2rem;
 }
 
-#first_name, #last_name {
+#first_name,
+#last_name {
     color: crimson;
     font-style: italic;
     font-size: 1.2rem;
     font-weight: 900;
 }
 
-.profession, .tool, .programming_paragigm{
+.profession,
+.tool,
+.programming_paragigm {
     color: crimson
 }
 
 @media screen and (max-width: 480px) {
-    
+
     .intro_container {
         flex-direction: column;
-        
+
     }
 
-    .profile{
+    .profile {
         width: 300px;
         height: 300px;
     }
@@ -58,31 +62,39 @@
         height: 200px;
         /* background-color: green; */
         margin: 0px auto;
+        line-height: 1.2rem
 
-        
     }
-    .programming_paragigm{
-            display: block;
-            color: green;
+
+    .programming_paragigm {
+        display: block;
+        color: green;
     }
-    
+
 }
 
 @media screen and (min-width: 768px) and (max-width: 915px) {
 
     .intro_left_side {
-        padding-top: 30rem;
+        padding-top: 20rem;
+        line-height: 2rem
     }
 
-    .programming_paragigm{
+    .programming_paragigm {
         display: block;
-        color: green;
-}
+    }
 
 }
 
 @media screen and (min-width: 481px) and (max-width: 767px) {
     .intro_left_side {
+        line-height: 1.5rem;
         padding-top: 10rem;
+    }
+}
+
+@media screen and (min-width: 1300px) {
+    .programming_paragigm {
+        display: block;
     }
 }
