--- a/app/code/src/components/menu/AppMenu.css
+++ b/app/code/src/components/menu/AppMenu.css
@@ -163,11 +163,10 @@
 
 @media screen and (max-width: 480px) {
     .logo_menu{
-        color: white;
+        color: #fff;
         font-weight: bolder;
         font-style: italic;
-        font-family: cursive;
-        /* font-size: 100px; */
+        font-size: 1rem;
         /* background-color: green; */
     }
     .item_text {
