--- a/app/code/src/components/sections/skills/skills.css
+++ b/app/code/src/components/sections/skills/skills.css
@@ -31,6 +31,18 @@
     background-color: rgb(165, 16, 46) !important
 }
 
+.skill_type_title{
+    text-align: center;
+    padding-top: 10px;
+}
+/* .skill_type_title::after{
+    content: "";
+    width: 100%;
+    height: 2px;
+    border-bottom: 4px solid black;
+    display: block;
+} */
+
 
 
 @media screen and (max-width: 480px) {
