--- a/app/code/src/components/focus/focus.css
+++ b/app/code/src/components/focus/focus.css
@@ -1,4 +1,24 @@
 
+/* .clippy-cont {
+    height: 100vh;
+} */
+
+.clippy-cont {
+    width: 100%;
+    height: 100vh;
+    /* background-color: crimson; */
+}
+.clippy {
+
+    /* clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 25% 100%, 0% 50%); */
+    /* clip-path: circle(20px at 20% 20%); */
+
+    width: 300px;
+    height: 300px;
+    clip-path: polygon(24% 0, 100% 0%, 100% 100%, 25% 100%, 0% 50%);
+}
+
+
 #focus {
     margin-top: -550px;
 }
