--- a/app/code/src/components/intro/intro.css
+++ b/app/code/src/components/intro/intro.css
@@ -7,18 +7,19 @@
 }
 
 .intro_left_side {
-    flex: 7;
+    flex: 5;
     background-image: url('../../assets/images/clippy.png');
     background-attachment: scroll;
     clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
     display: block;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     align-content: center;
     padding-left: 10rem;
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     color: white;
+    height: 450px;
 }
 
 .profile {
@@ -47,6 +48,10 @@
     font-size: 1.2rem;
     font-weight: 900;
 }
+.greetings {
+    font-size: 1rem;
+    font-weight: 900;
+}
 
 
 .favorites_paradigms {
@@ -55,13 +60,21 @@
     color: black;
     border-bottom: 2px solid white;
     /* display: block; */
+
+    transform: rotate(200deg);
+
 }
 
 .tool {
     margin-top: 30px;
-    transform: rotate(-15deg);
+    transform: rotate(340deg);
     padding-top: 2rem;
     color: white;
+    color: black;
+}
+
+.profession {
+    color: black;
 }
 
 @media screen and (max-width: 480px) {
