--- a/app/code/src/components/sections/skills/skills.css
+++ b/app/code/src/components/sections/skills/skills.css
@@ -32,10 +32,7 @@
     /* background-color: rgb(252, 214, 214); */
 }
 
-.skills_type:hover {
-    background-color: rgb(165, 16, 46) !important;
-    cursor: pointer;
-}
+
 
 .skill_type_title{
     text-align: center;
@@ -53,8 +50,39 @@
 .tech_icon {
     width: 80px;
     height: 80px;
+    border-radius: 50px;
+    object-fit: cover;
 }
 
+.backend_skills {
+    display: flex;
+    justify-content: space-between;
+    /* align-items: center; */
+    align-content: center;
+    flex-direction: column;
+    color: crimson;
+}
+
+.backend_skills:hover{
+    color: white;
+}
+
+.skills_type:hover {
+    background-color: rgb(165, 16, 46) !important;
+    cursor: pointer;
+    color: white;
+}
+
+.java, .spring, .kafka {
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+    margin-top: 30px;
+}
+
+.details {
+    margin-left: 10px;
+}
 
 @media screen and (max-width: 480px) {
 
