--- a/app/code/src/components/app-bar/AppBar.css
+++ b/app/code/src/components/app-bar/AppBar.css
@@ -21,6 +21,7 @@
     align-items: center;
     align-content: center;
     list-style-type: none;
+    padding: 0px 25px;
 
 }
 
@@ -28,12 +29,14 @@
     margin: 0px 10px;
     text-transform: uppercase;
     font-size: var(--defaultFontSize);
-    color: crimson
+    color: crimson;
+    padding: 0px 20px;
+    font-weight: 400;
     
 }
 
 .right_side .links li a:hover{
-    border-bottom: 5px solid black;
+    border-bottom: 2px solid black;
     transition: 0.5s;
 }
 
