--- a/app/code/src/components/intro/intro.css
+++ b/app/code/src/components/intro/intro.css
@@ -8,9 +8,9 @@
 
 .intro_left_side {
     flex: 5;
-    background-image: url('../../assets/images/clippy.png');
-    background-attachment: scroll;
-    clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
+    /* background-image: url('../../assets/images/clippy.png'); */
+    /* background-attachment: scroll; */
+    /* clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%); */
     display: block;
     justify-content: space-between;
     align-items: center;
@@ -18,7 +18,7 @@
     padding-left: 10rem;
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
-    color: white;
+    /* color: white; */
     height: 450px;
 }
 
@@ -36,23 +36,54 @@
     justify-content: center;
     align-items: center;
     align-content: center;
-    padding-top: 15px;
-
+    padding-top: 6rem;
     line-height: 26px;
+    padding-right: 10rem;
+    color: crimson;
+    /* background-image: url('../../assets/images/clippy.png');
+    clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%); */
+    
 }
 
-#first_name,
-#last_name, .tool {
+#first_name{
+    font-family: 'Freehand', cursive;
+    font-size: 3rem;
+    text-align: center;
+}
+#last_name, 
+.tool {
     color: black;
     font-style: italic;
     font-size: 1.2rem;
     font-weight: 900;
 }
+
 .greetings {
-    font-size: 1rem;
-    font-weight: 900;
+    font-size: 16px;
+    letter-spacing: 1px;
+    padding-bottom: 13px;
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
+    
 }
 
+.intro_text_bottom {
+    font-family: 'Raleway', sans-serif;
+}
+.greetings_title{
+    font-size: 25px;
+    padding-top: 15px;
+}
+
+.greetings_tool {
+    font-size: 25px;
+    padding-top: 15px;
+    font-family: 'Raleway', "sa ns-serif";
+    text-align: center;
+}
+.language {
+    font-weight: 900;
+}
 
 .favorites_paradigms {
     margin-bottom: 80px;
@@ -61,16 +92,19 @@
     border-bottom: 2px solid white;
     /* display: block; */
 
-    transform: rotate(200deg);
+    /* transform: rotate(200deg); */
 
 }
 
 .tool {
-    margin-top: 30px;
-    transform: rotate(340deg);
-    padding-top: 2rem;
-    color: white;
-    color: black;
+    /* margin-top: 30px; */
+    /* transform: rotate(340deg); */
+    padding-top: 10px;
+    color: crimson;
+    font-family: 'Raleway', "sa ns-serif";
+    text-align: center;
+    letter-spacing: 1.5px;
+    
 }
 
 .profession {
@@ -96,7 +130,6 @@
         /* background-color: green; */
         margin: 0px auto;
         line-height: 1.2rem
-
     }
 
     .programming_paragigm {
