--- a/app/code/src/components/sections/skills/skills.css
+++ b/app/code/src/components/sections/skills/skills.css
@@ -119,6 +119,11 @@
         text-transform: capitalize;
     }
 
+    .skills_first_row {
+        display: flex;
+        flex-direction: column;
+    }
+
 }
 
 @media screen and (min-width: 768px) and (max-width: 915px) {
