--- a/app/code/src/components/intro/intro.css
+++ b/app/code/src/components/intro/intro.css
@@ -116,6 +116,7 @@
     .intro_container {
        display: flex;
        flex-direction: column;
+       margin-bottom: 12rem;
     }
 
     .intro_left_side {
@@ -125,7 +126,7 @@
     }
 
     #first_name{
-        font-size: 1rem;
+        font-size: 2rem;
         /* text-align: center; */
     }
     #last_name, 
@@ -134,16 +135,23 @@
     }
 
     .greetings {
-        font-size: 6px;
+        font-size: 20px;
         
     }
 
     .greetings_title{
-        font-size: 10px;
+        font-size: 15px;
         text-align: center;
     }
     
     .greetings_tool {
+        font-size: 20px;
+    }
+
+    .tool {
+        padding-top: 10px;
+        text-align: center;
+        letter-spacing: 1.5px;
         font-size: 10px;
     }
 
@@ -157,8 +165,8 @@
         width: 300px;
         height: 200px;
         /* background-color: green; */
-        margin: 0px auto;
-        line-height: 10px
+        margin: 10px auto;
+        line-height: 20px
     }
 
     .programming_paragigm {
