--- a/app/code/src/components/sections/skills/skills.css
+++ b/app/code/src/components/sections/skills/skills.css
@@ -48,6 +48,7 @@
 .skill_type_title{
     text-align: center;
     padding-top: 10px;
+    padding-bottom: 0px;
     font-size: 1.8rem;
     letter-spacing: 2px;
     font-family: 'Freehand', cursive;
@@ -76,7 +77,7 @@
     margin-top: 10px;
 }
 
-.mysql, .postgres, .elasticsearch, .jpa, .hibernate {
+.mysql, .postgres, .elasticsearch, .jpa, .hibernate, .jenkins, .git, .github {
     display: flex;
     align-items: center;
     margin-left: 20px;
@@ -126,9 +127,17 @@
         text-transform: capitalize;
     }
 
+    .skill_type_title {
+        padding-bottom: 30px;
+    }
+
     .skills_first_row {
         display: flex;
         flex-direction: column;
+    }
+
+    .additional_details {
+        display: none;
     }
 
 }
