--- a/app/code/src/components/sections/skills/skills.css
+++ b/app/code/src/components/sections/skills/skills.css
@@ -70,7 +70,7 @@
     margin-left: 20px;
     margin-top: 30px;
 }
-.javascript, .typescript, .material_ui, .redux, .reactjs, .kafka_streams {
+.javascript, .typescript, .material_ui, .redux, .reactjs, .kafka_streams, .maven, .gradle {
     display: flex;
     align-items: center;
     margin-left: 20px;
