--- a/app/code/src/components/app-bar/AppBar.css
+++ b/app/code/src/components/app-bar/AppBar.css
@@ -1,7 +1,14 @@
 :root {
     --defaultFontSize: 1.2rem;
 }
-
+.navbar {
+    width: 100% !important;
+    height: 50px !important;
+    position: fixed !important;
+    top: 0px !important ;
+    /* background-color: green !important; */
+    margin: 0px !important;
+}
 .logo {
 
     font-size: 1.6rem;
@@ -57,7 +64,7 @@
         font-size: var(--defaultFontSize);
     }
     .navbar {
-        background-color: green;
+        /* background-color: green; */
     }
 
     .menu {
