--- a/app/code/src/components/app-bar/AppBar.css
+++ b/app/code/src/components/app-bar/AppBar.css
@@ -14,7 +14,7 @@
     font-size: 1.6rem;
     font-weight: 900;
     font-style: italic;
-    border-bottom: 5px solid black;
+    /* border-bottom: 5px solid black; */
 }
 
 .logo:hover {
