--- a/app/code/src/components/contact/contact.css
+++ b/app/code/src/components/contact/contact.css
@@ -12,11 +12,58 @@
     color: crimson;
 }
 
+.bottom_navigation {
+    display: none;
+}
+
+.bottom_navigation_action {
+    color: crimson !important;
+}
+
+.main_background {
+    background-color: gray;
+    width: 100%;
+    height: 100vh;
+    padding-top: -10px;
+    position: fixed;
+    top: 0px;
+}
+
+.name_input {
+    padding-right: 3px !important;
+}
+
+.email_input {
+    padding-left: 3px !important;
+}
+
+.contact_wrapper {
+    width: 500px;
+    height: 400px;
+    background-color: white;
+    margin: 30px auto;
+    border-radius: 15px;
+}
+
+.message, .name_email{
+    padding: 10px 20px;
+}
+
+.name_email {
+    display: flex;
+    justify-content: space-between;
+
+}
+
 @media screen and (max-width: 480px) {
     
     .chat_icon {
         width: 40px !important;
         height: 40px !important;
         color: crimson !important;
+    }
+
+    .bottom_navigation {
+        display: block;
     }
 }
