--- a/app/code/src/components/contact/contact.css
+++ b/app/code/src/components/contact/contact.css
@@ -3,13 +3,16 @@
     float: inline-end;
 }
 
-.chat_icon {
+.move_to_top_icon {
     position: fixed;
-    bottom: 20px;
+    bottom: 5px;
     right: 20px;
     width: 50px !important;
     height: 50px !important;
     color: crimson;
+    
+    animation: blink-animation 3s steps(3, start) infinite;
+        -webkit-animation: blink-animation 3s steps(3, start) infinite;
 }
 
 .bottom_navigation {
@@ -24,7 +27,7 @@
 
     width: 100%;
     height: 100vh;
-    padding-top: -10px;
+    padding-top: 0px;
     position: fixed;
     top: 0px;
 
@@ -84,6 +87,18 @@
     display: flex;
     justify-content: space-between;
 
+}
+
+@keyframes blink-animation {
+    
+    to {
+        visibility: hidden;
+      }
+    }
+    @-webkit-keyframes blink-animation {
+      to {
+        visibility: hidden;
+      }
 }
 
 @media screen and (max-width: 480px) {
