--- a/app/code/src/components/contact/contact.css
+++ b/app/code/src/components/contact/contact.css
@@ -10,7 +10,7 @@
     width: 50px !important;
     height: 50px !important;
     color: crimson;
-    
+    cursor: pointer;
     animation: blink-animation 3s steps(3, start) infinite;
         -webkit-animation: blink-animation 3s steps(3, start) infinite;
 }
