--- a/app/code/src/components/focus/focus.css
+++ b/app/code/src/components/focus/focus.css
@@ -1,58 +1,65 @@
-
-/* .clippy-cont {
-    height: 100vh;
-} */
-
-.clippy-cont {
+.my_focus_wrapper {
+   
+    background-color: darkgray;
     width: 100%;
-    height: 100vh;
-    /* background-color: crimson; */
+    height: calc(100vh - 50px);
+    margin-top: 50px;
 }
-.clippy {
-
-    /* clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 25% 100%, 0% 50%); */
-    /* clip-path: circle(20px at 20% 20%); */
-
-    width: 300px;
-    height: 300px;
-    clip-path: polygon(24% 0, 100% 0%, 100% 100%, 25% 100%, 0% 50%);
+.my_focus_title {
+    text-align: center;
+    padding: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    border-bottom: px solid black;
+    margin-bottom: 40px;
 }
 
-
-#focus {
-    margin-top: -550px;
+#focus_tech {
+    display: flex;
+    justify-content: space-around;
+    text-transform: capitalize;
+    align-content: center;
+    align-items: center;
+    padding-bottom: 230px;
 }
 
-.wrapper {
-    /* color: red; */
+.focus_column {
+
+    border-bottom: 3px solid crimson;
 }
-.focus-wrapper .wrapper {
-    
-    list-style-type: square;
-    font-weight: 500;
-    font-size: 15px;
-    line-height: 40px;
+
+.connect_wrapper {
+   
+}
+
+.connect_with_me_title {
+    text-align: center;
+}
+
+.connect_with_me_socials {
+    display: flex;
+    justify-content: space-around;
+
+    width: 50%;
+    margin: 30px auto;
+}
+
+.social_icon {
+    color: black;
 }
 
 @media screen and (max-width: 480px) {
-
-    #focus {
-        margin-top: -800px;
-    }
-
-    .focus-wrapper .wrapper {
-
-        display: block;
-        justify-content: center;
-        align-items: center;
+    
+    #focus_tech {
+        display: flex;
+        justify-content: space-around;
+        text-transform: capitalize;
         align-content: center;
-        /* list-style-type: none; */
-        width: 180px;
-        margin: 10px auto;
-        /* background-color: green; */
-        font-weight: 500;
-        font-size: 15px;
-        line-height: 40px;
+        align-items: center;
+        flex-direction: column;
+        padding-bottom: 70px;
     }
 
+    .focus_column{
+        padding: 20px 20px;
+    }
 }
