--- a/app/code/src/components/sections/skills/skills.css
+++ b/app/code/src/components/sections/skills/skills.css
@@ -122,7 +122,7 @@
     letter-spacing: 1px;
     color: #3a3e59;
     opacity: 0.8;
-    padding-bottom: 10px;
+    padding: 20px 10px;
 }
 @media screen and (max-width: 480px) {
 
@@ -149,6 +149,10 @@
 
     .additional_details {
         display: none;
+    }
+
+    .about_me {
+        padding: 0px 30px;
     }
 
 }
