--- a/app/code/src/components/sections/skills/skills.css
+++ b/app/code/src/components/sections/skills/skills.css
@@ -23,7 +23,7 @@
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: minmax(100px, auto);
     grid-gap: 10px 30px;
-    padding: 3rem 10px;
+    padding: 1.3rem 10px;
 
 }
 
@@ -37,12 +37,6 @@
     border-radius: 15px;
     background-color: rgb(248, 223, 191);
 }
-
-.skills_first_row, .skills_second_row, .skills_third_row {
-   
-}
-
-
 
 
 .skill_type_title{
@@ -108,7 +102,7 @@
 .details_explain {
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
-    opacity: 0.5;
+    opacity: 0.6;
     /* text-align: center; */
 
     display: flex;
@@ -152,7 +146,8 @@
     }
 
     .about_me {
-        padding: 0px 30px;
+        padding-top: 0px;
+        margin-bottom: 2rem;
     }
 
 }
