--- a/app/code/src/components/social/social.css
+++ b/app/code/src/components/social/social.css
@@ -1,3 +1,24 @@
 .social_wrapper {
-    background-color: darkred;
+    width: 100%;
+    height: 100vh;
+}
+
+.social_title {
+
+    text-align: center;
+    font-size: 20px;
+    font-weight: 900;
+    padding-top: 90px;
+    font-family: 'Freehand', cursive;
+    color: crimson;
+}
+
+.connect_with_me_socials {
+    display: flex;
+    
+    margin-top: 15%;
+}
+
+.social_icon {
+    color: crimson;
 }
