--- a/app/code/src/components/contact/contact.css
+++ b/app/code/src/components/contact/contact.css
@@ -113,6 +113,7 @@
         background-color: white !important;
         width: 90%;
         height: 370px;
+        margin-top: 3.5rem;
     }
 
     .name_email, .message {
@@ -138,4 +139,12 @@
     .bottom_navigation {
         display: block;
     }
+}
+
+
+@media screen and (min-width: 481px) {
+    .contact_wrapper {
+        margin-top: 4rem;
+    }
+    
 }
