--- a/app/code/src/components/social/social.css
+++ b/app/code/src/components/social/social.css
@@ -3,22 +3,26 @@
     height: 100vh;
 }
 
-.social_title {
+.social_title_2 {
 
     text-align: center;
     font-size: 20px;
     font-weight: 900;
-    padding-top: 90px;
+    padding: 30px;
     font-family: 'Freehand', cursive;
     color: crimson;
 }
 
-.connect_with_me_socials {
+.connect_with_me_socials_2 {
     display: flex;
-    
-    margin-top: 15%;
+    justify-content: space-around;
+   padding-bottom: 30px;
 }
+
+
+
 
 .social_icon {
     color: crimson;
+    margin-bottom: 50px;
 }
