--- a/app/code/src/components/app-bar/AppBar.css
+++ b/app/code/src/components/app-bar/AppBar.css
@@ -42,24 +42,48 @@
     margin: 0px 10px;
     text-transform: uppercase;
     font-size: var(--defaultFontSize);
-    color: crimson;
+    color: white;
     padding: 0px 20px;
     font-weight: 400;
     
 }
 
+.right_side .links li > li {
+    margin: 0px 10px;
+    text-transform: uppercase;
+    font-size: var(--defaultFontSize);
+    color: white;
+    padding: 0px 20px;
+    font-weight: 900;
+}
+
 .right_side .links li a:hover{
     border-bottom: 2px solid black;
     transition: 0.5s;
+    cursor: pointer;
+}
+
+.right_side .links li > li:hover {
+    border-bottom: 2px solid black;
+    transition: 0.5s;
+    cursor: pointer;
 }
 
 .menu {
     display: none;
 }
 
+@media screen and (min-width: 481px) {
+    /* .right_side {
+        display: none;
+        visibility: hidden;
+    } */
+}
+
 @media screen and (max-width: 480px) {
     .right_side {
         display: none;
+        visibility: hidden;
     }
 
     .menu {
