added programming paradigms marquee

--- a/app/code/src/components/intro/intro.css
+++ b/app/code/src/components/intro/intro.css
@@ -141,6 +141,9 @@ marquee {
 }
 
 @media screen and (min-width: 481px) {
+    .my_paradigms {
+        display: none;
+    }
     
 }
 @media screen and (min-width: 481px) {
